# starbucks_google_translator

./: Cargo.toml  README.MD
src/: main.rs  translator.rs
src/translator/: api_responses.rs  language.rs  ui.rs
