[package]
name = "starbucks_google_translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.17"
eframe = "0.21.3"
tokio = { version = "1.22.0", features = ["full"] }
strum = "0.24.1"
strum_macros = "0.24.3"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
percent-encoding = "2.2.0"
